# fastapi_course

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
app/: __init__.py  alembic.ini  auth.py  cli.py  crear_tablas.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 2bfd7802b5ae_se_modifica_tabla_itemscarrito_columna_.py  6bca4f5c781e_crear_tablas_carrito_y_pedidos.py  8417bf0af09f_crear_tablas_iniciales.py  9f3a1be9c2d1_unicidad_carrito_por_cliente.py  c1a4d6e9f302_agrega_columna_stock_productos.py
app/api/v1/: api.py  auth.py  carrito.py  categoria.py  pedido.py  productos.py  test.py  usuario.py
app/core/: config.py  security.py
app/crud/: __init__.py  carrito.py  categoria.py  pedido.py  producto.py  usuario.py
app/db/: database.py  init_db.py
app/models/: __init__.py  carrito.py  categoria.py  pedidos.py  producto.py  usuario.py
app/schemas/: __init__.py  categoria.py  pedidos.py  producto.py  usuario.py
app/test/: test_auth.py  test_productos.py
scripts/: prepush-check.ps1
