[project]
name = "ecommerce-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "alembic>=1.18.4",
]

[project.scripts]
db-current = "app.cli:db_current"
db-downgrade = "app.cli:db_downgrade"
db-history = "app.cli:db_history"
db-revision = "app.cli:db_revision"
db-stamp = "app.cli:db_stamp"
db-upgrade = "app.cli:db_upgrade"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["__pycache__", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
